--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
 /vendor
-.env
 .phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
 .editorconfig
 .idea/
-*.log
-.env.staging
-.env.production
-.env.dev
+composer.lock
