--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "illuminate/support": "^5|^6"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.4"
+        "orchestra/testbench": "^3.8 || ^4.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
