--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ cache:
 matrix:
   include:
     - php: 7.2
+      env: FRAMEWORK_VERSION=laravel/framework:5.7.* COMPOSER_FLAGS="--prefer-lowest"
+    - php: 7.2
       env: FRAMEWORK_VERSION=laravel/framework:5.8.* COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.2
       env: FRAMEWORK_VERSION=laravel/framework:6.*
@@ -14,6 +16,8 @@ matrix:
       env: FRAMEWORK_VERSION=laravel/framework:6.*
     - php: 7.4
       env: FRAMEWORK_VERSION=laravel/framework:6.*
+    - php: 7.2
+      env: FRAMEWORK_VERSION=laravel/lumen-framework:5.7.* COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.2
       env: FRAMEWORK_VERSION=laravel/lumen-framework:5.8.* COMPOSER_FLAGS="--prefer-lowest"
     - php: 7.3
