--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "^5|^6"
+        "illuminate/support": "^5|^6|^7"
     },
     "require-dev": {
         "orchestra/testbench": "^3.8 || ^4.0",
